remove wrapped APIs and add dedicated logstash APIs